[gd_scene load_steps=7 format=3 uid="uid://cg43t642473it"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_wq3q8"]
[ext_resource type="Texture2D" uid="uid://doia3cj0jhur7" path="res://Textures/Player/Player_sprite.png" id="2_vy4s8"]
[ext_resource type="PackedScene" uid="uid://donjqr6bpxwmd" path="res://Utility/hurt_box.tscn" id="3_kiiq5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q5fut"]
radius = 7.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4kgy"]
size = Vector2(24, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_2ma74"]
radius = 148.125

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_wq3q8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_vy4s8")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_q5fut")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_kiiq5")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_m4kgy")

[node name="Attack" type="Node2D" parent="."]

[node name="TridentTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="TridentAttackTimer" type="Timer" parent="Attack/TridentTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_2ma74")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/TridentTimer" to="." method="_on_trident_timer_timeout"]
[connection signal="timeout" from="Attack/TridentTimer/TridentAttackTimer" to="." method="_on_trident_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="HurtBox"]
